<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="15"
        android:background="@color/cardview_light_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/countText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="15sp"
            tools:ignore="DuplicateIds" />
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:layout_above="@+id/toggleButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/countText">

            <VideoView
                android:id="@+id/videoView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_above="@+id/toggleButton"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/countText"
                tools:ignore="MissingConstraints" />
        </FrameLayout>
        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="267dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:layout_weight="3"
            android:background="@drawable/circle"
            android:textOff="@string/record"
            android:textOn="@string/stop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/videoView"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/toggleButtonQuality"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/circle2"
                android:checked="true"
                android:textOff="@string/_50"
                android:textOn="@string/_100"
                app:layout_constraintBottom_toTopOf="@+id/textView5"
                app:layout_constraintEnd_toStartOf="@+id/toggleButtonFrameRate"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toggleButton"
                tools:ignore="MissingConstraints" />

            <ToggleButton
                android:id="@+id/toggleButtonDelay"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/circle2"
                android:textOff="@string/no"
                android:textOn="@string/_3s"
                app:layout_constraintBottom_toTopOf="@+id/textView7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.523"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toggleButton"
                tools:ignore="MissingConstraints" />

            <ToggleButton
                android:id="@+id/toggleButtonPreview"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/circle2"
                android:checked="true"
                android:textOff="@string/off"
                android:textOn="@string/on"
                app:layout_constraintBottom_toTopOf="@+id/textView8"
                app:layout_constraintEnd_toStartOf="@+id/toggleButtonFormat"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/toggleButtonDelay"
                app:layout_constraintTop_toBottomOf="@+id/toggleButton"
                tools:ignore="MissingConstraints" />

            <ToggleButton
                android:id="@+id/toggleButtonFrameRate"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/circle2"
                android:checked="false"
                android:textOff="@string/_30"
                android:textOn="@string/_60"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintBottom_toTopOf="@+id/textView9"
                app:layout_constraintEnd_toStartOf="@+id/toggleButtonDelay"
                app:layout_constraintStart_toEndOf="@+id/toggleButtonQuality"
                app:layout_constraintTop_toBottomOf="@+id/toggleButton"
                tools:ignore="MissingConstraints" />

            <ToggleButton
                android:id="@+id/toggleButtonFormat"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/circle2"
                android:checked="false"
                android:textOff="@string/mp4"
                android:textOn="@string/avi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/toggleButtonPreview"
                app:layout_constraintTop_toBottomOf="@+id/toggleButton"
                tools:ignore="MissingConstraints" />

        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="343dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            tools:layout_editor_absoluteY="576dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/quality"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/textView7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints,NotSibling" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/delay"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/textView8"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/preview"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/fps"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/textView10"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints,NotSibling"
                tools:layout_editor_absoluteY="5dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:text="@string/format"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView9"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>